--- a/styles/assets.css
+++ b/styles/assets.css
@@ -207,7 +207,7 @@ input {
 }
 
 *::-webkit-scrollbar {
-    width: 4px;
+    width: 8px;
     height: 4px;
 }
 
